perf(zona): optimizar carga de zonas con EntityGraph para reducir consultas N+1